--- a/src/app/pages/page-lol/page-lol.component.html
+++ b/src/app/pages/page-lol/page-lol.component.html
@@ -1,1 +1,1 @@
-<app-display-lol [allCharacters]="characters"></app-display-lol>
+<app-display-lol [allCharacters]="characters" (deleteCharacter)="deleteByParent($event)"></app-display-lol>
