add character implemented

--- a/src/app/components/display-lol/display-lol.component.html
+++ b/src/app/components/display-lol/display-lol.component.html
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col">
         <div>
-            <h2 class="heading-section text-center jumbotron bg-cover text-white">Active characters</h2>
+            <h2 class="heading-section text-center jumbotron bg-cover text-white"><i class="bi bi-emoji-smile"></i> Active characters</h2>
         </div>
         <table class="table table-responsive-xl table-striped table-light">
             <thead>
@@ -36,7 +36,7 @@
 </div>
 <div class="col">
     <div >
-        <h2 class="heading-section jumbotron col-xs-6 bg-cover text-white text-center">Inactive characters</h2>
+        <h2 class="heading-section jumbotron col-xs-6 bg-cover text-white text-center"><i class="bi bi-emoji-dizzy"></i> Inactive characters</h2>
     </div>
     <table class="table table-responsive-xl table-striped table-light">
         <thead>
