--- a/src/app/pages/page-lol/page-lol.component.html
+++ b/src/app/pages/page-lol/page-lol.component.html
@@ -1,1 +1,2 @@
+<app-add-char (newCharacter)="addCharacterByParent($event)"></app-add-char>
 <app-display-lol [allCharacters]="characters" (deleteCharacter)="deleteByParent($event)"></app-display-lol>
