--- a/src/app/layouts/add-char/add-char.component.html
+++ b/src/app/layouts/add-char/add-char.component.html
@@ -1,9 +1,10 @@
 
 <div class="col">
-    <h4> Add a new character: </h4>
+    <h4> Add a new character*: </h4>
     <div class="input-group mb-3">
     <span class="input-group-text" id="basic-addon1"><i class="bi bi-person-plus-fill"></i></span>
     <input type="text" class="form-control" placeholder="Name" #newChar>
     <button (click)="addCharacter(newChar.value)" type="button" class="btn btn-primary">Add</button>
 </div>
+<span>*Note that new characters are active be default</span>
 </div>
